[package]
name = "dump"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
dump-common = { path = "../dump-common", features=["user"] }
anyhow = "1.0.42"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"

[[bin]]
name = "dump"
path = "src/main.rs"
