[package]
name = "dump"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
dump-common = { path = "../dump-common", features=["user"] }
anyhow = "1.0.42"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
bytes = "1.4.0"
once_cell = "1.17.0"
async-ffi = "0.4.0"

[lib]
crate-type = ["cdylib"]
