[package]
name = "dump"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
dump-common = { path = "../dump-common", features=["user"] }
anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["full"] }
bytes = "1.4.0"
once_cell = "1.17.1"
async-ffi = "0.4.0"

[lib]
crate-type = ["cdylib"]
